[tool.poetry]
name = "bigquery-to-supa"
version = "0.1.0"
description = "BQ to Supabase Scripts"
authors = ["Wes Hahn <westly.hahn@gmail.com>"]
license = "Apache2.0"
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-bigquery = "^3.20.1"
psycopg2-binary = "^2.9.9"
typer = "^0.12.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
